# praxy

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
data/references/: ashwin_mother_teresa_road.stt.json  cartesia_hi_female_6s.stt.json  sarvam_hi_female_10s.stt.json  sarvam_ta_male_11s.stt.json  sarvam_te_female_9s.stt.json
hf_release/praxy-voice-r6/: LICENSE  README.md  config.json
paper/praxy_tts/: README.md  build.sh  praxy_tts.tex  refs.bib
praxy/: __init__.py
praxy/linguistics/: indic_numbers.py  te_numbers.py  test_bups.py  test_indic_numbers.py  test_te_numbers.py
serving/: codemix_to_native_script.py  gradio_app.py  praxy_router.py
